<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:padding="5dp"
                    android:gravity="center">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/btnTop"
                        android:text="US Dollar"
                        android:textColor="@color/textbtn"
                        android:textSize="15dp"
                        android:gravity="center"></Button>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btn_Chuyen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/btnTop"
                        android:text="@string/btn_chuyenDoi"
                        android:textColor="@color/textbtn"
                        android:textSize="20dp"></Button>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:padding="5dp"
                    android:gravity="center">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/btnTop"
                        android:text="Vietnam Dong"
                        android:textColor="@color/textbtn"
                        android:textSize="15dp"
                        android:gravity="center"></Button>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@color/textview"
                android:orientation="vertical"
                android:layout_margin="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edt_ManHinh"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/textview"
                        android:textColor="@color/textbtn"></EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_KetQua"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/textview"
                        android:textColor="@color/textbtn"></TextView>
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">

            <LinearLayout
                style="@style/mylinerlayout">
                <Button
                    android:text="@string/btn_x"
                    style="@style/myButton">
                </Button>
                <Button
                    android:textSize="40dp"
                    android:text="@string/btn_TenTrai"
                    style="@style/myButtonTop">
                </Button>

                <Button
                    android:textSize="40dp"
                    style="@style/myButtonTop"
                    android:text="@string/btn_TenPhai"></Button>

                <Button
                    android:id="@+id/btn_Clear"
                    android:text="C"
                    android:background="@color/btnTop"
                    style="@style/myButtonTop">
                </Button>
                <Button
                    android:text="@string/btn_CLR"
                    android:background="@color/btnTop"
                    style="@style/myButtonTop">
                </Button>
            </LinearLayout>
            <LinearLayout
                style="@style/mylinerlayout">

                <Button
                    style="@style/myButton"
                    android:background="@drawable/ic_operator_fraction">

                </Button>

                <Button
                    style="@style/myButton"
                    android:background="@drawable/ic_function_power"></Button>

                <Button
                    style="@style/myButtonTop"
                    android:text="@string/btn_can"></Button>

                <Button
                    android:text="@string/btn_BinhPhuong"
                    style="@style/myButtonTop">
                </Button>
                <Button
                    android:text="@string/btn_Abs"
                    style="@style/myButtonTop">
                </Button>
            </LinearLayout>
            <LinearLayout
                style="@style/mylinerlayout">
                <Button
                    android:text="@string/btn_MoNgoac"
                    style="@style/myButtonTop">
                </Button>
                <Button
                    android:text="@string/btn_DongNgoac"
                    style="@style/myButtonTop">
                </Button>
                <Button
                    android:text="@string/btn_CanX"
                    style="@style/myButtonTop">
                </Button>
                <Button
                    android:text="@string/btn_GiaiThua"
                    style="@style/myButton">
                </Button>
                <Button
                    android:textSize="25dp"
                    android:text="@string/btn_Log"
                    style="@style/myButtonTop">
                </Button>
            </LinearLayout>
            <LinearLayout
                style="@style/mylinerlayout">
                <Button
                    android:id="@+id/btn7"
                    android:text="@string/btn_7"
                    style="@style/myButton">
                </Button>
                <Button
                    android:id="@+id/btn8"
                    android:text="@string/btn_8"
                    style="@style/myButton">
                </Button>
                <Button
                    android:id="@+id/btn9"
                    android:text="@string/btn_9"
                    style="@style/myButton">
                </Button>
                <Button
                    android:id="@+id/btn_Chia"
                    android:text="@string/btn_Chia"
                    style="@style/myButton">
                </Button>
            </LinearLayout>
            <LinearLayout
                style="@style/mylinerlayout">
                <Button
                    android:id="@+id/btn4"
                    android:text="@string/btn_4"
                    style="@style/myButton">
                </Button>
                <Button
                    android:id="@+id/btn5"
                    android:text="@string/btn_5"
                    style="@style/myButton">
                </Button>

                <Button
                    android:id="@+id/btn6"
                    style="@style/myButton"
                    android:text="@string/btn_6"></Button>

                <Button
                    android:id="@+id/btn_Nhan"
                    android:text="@string/btn_Nhan"
                    style="@style/myButton">
                </Button>
            </LinearLayout>
            <LinearLayout
                style="@style/mylinerlayout">
                <Button
                    android:id="@+id/btn1"
                    android:text="@string/btn_1"
                    style="@style/myButton">
                </Button>
                <Button
                    android:id="@+id/btn2"
                    android:text="@string/btn_2"
                    style="@style/myButton">
                </Button>
                <Button
                    android:id="@+id/btn3"
                    android:text="@string/btn_3"
                    style="@style/myButton">
                </Button>
                <Button
                    android:id="@+id/btn_Tru"
                    android:text="@string/btn_Tru"
                    style="@style/myButton">
                </Button>
            </LinearLayout>
            <LinearLayout
                style="@style/mylinerlayout">
                <Button
                    android:text="@string/btn_PhanTram"
                    style="@style/myButton">
                </Button>
                <Button
                    android:id="@+id/btn0"
                    android:text="@string/btn_0"
                    style="@style/myButton">
                </Button>
                <Button
                    android:id="@+id/btn_Cham"
                    android:text="@string/btn_Phay"
                    style="@style/myButton">
                </Button>
                <Button
                    android:id="@+id/btn_Cong"
                    android:text="@string/btn_Cong"
                    style="@style/myButton">
                </Button>
            </LinearLayout>
            <LinearLayout
                style="@style/mylinerlayout">
                <Button
                    android:id="@+id/btnAll"
                    android:text="@string/btn_ALL"
                    style="@style/myButton">
                </Button>
                <Button
                    android:text="@string/btn_Exp"
                    style="@style/myButton">
                </Button>
                <Button
                    android:text="@string/btn_Ans"
                    style="@style/myButton">
                </Button>
                <Button
                    android:id="@+id/btn_KQ"
                    android:text="@string/btn_Bang"
                    style="@style/myButton">
                </Button>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>